--- a/assets/scss/blocks/molecules/_list-menu.scss
+++ b/assets/scss/blocks/molecules/_list-menu.scss
@@ -8,5 +8,10 @@
   &__item {
     display: flex;
     align-items: center;
+    min-width: 120px;
+
+    &--hidden{
+      visibility: hidden;
+    }
   }
 }
