--- a/assets/scss/blocks/organisms/_header.scss
+++ b/assets/scss/blocks/organisms/_header.scss
@@ -48,7 +48,7 @@
       z-index: 100;
       display: flex;
       flex-direction: column;
-      width: 55vw;
+      width: 57vw;
       height: 100vh;
       ;
       padding: 200px 20px 100px;
@@ -78,8 +78,16 @@
   }
 
   &__social {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: red;
+    min-width: 200px;
     @media (max-width:1114px) {
+      justify-content: center;
       padding-top: 50px;
+      min-width: initial;
+      
     }
   }
 
