--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,17 +12,32 @@ body {
   font-family: Inter, sans-serif;
   background-color: var(--color-primary);
 }
+/* Стилизация скроллбара для Webkit-браузеров (Chrome, Safari, Яндекс.Браузер, Opera) */
+body::-webkit-scrollbar {
+  width: 10px;              /* Ширина вертикального скроллбара */
+  height: 10px;             /* Высота горизонтального скроллбара */
+}
 
+/* Ползунок скроллбара */
+body::-webkit-scrollbar-thumb {
+  background: linear-gradient(135deg, #6e8efb, #a777e3); /* Градиентный фон для ползунка */
+  border-radius: 8px;        /* Скругление углов ползунка */
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1); /* Тень для объёма */
+}
+
+
+/* Трек (фон) скроллбара */
+body::-webkit-scrollbar-track {
+  background: #f3f3f3;       /* Светлый фон трека */
+  border-radius: 8px;        /* Скругление углов трека */
+}
 
 .no-scroll .categories a {
   pointer-events: none;
 }
 
 
-.no-scroll .masonry__img {
+.no-scroll .masonry__item {
   pointer-events: none;
 }
 
-.no-scroll .masonry__img.masonry__img-pop-up {
-  pointer-events: initial;
-}
