--- a/assets/scss/blocks/atoms/_link-menu.scss
+++ b/assets/scss/blocks/atoms/_link-menu.scss
@@ -18,10 +18,13 @@
       right: initial;
       bottom: -4px;
       left: 0;
-      width: 0;
+      width: 100%;
       height: 2px;
       background-color: var(--color-accent-primary);
-      transition: all .3s;
+      transition: transform .3s;
+
+      transform-origin: right;
+      transform: scaleX(0);
     }
 
     &:hover {
@@ -29,9 +32,9 @@
     }
 
     &:hover::before {
-      right: 0;
-      left: inherit;
-      width: 100%;
+      transform: scaleX(1);
+      transform-origin: left;
+
     }
   }
 
