--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -17,7 +17,11 @@ li {
   list-style: none;
 }
 
-
+picture {
+  // display: block;
+  // background-color: rgb(221, 221, 221);
+  // border:solid rgb(142, 95, 231) 2px;
+}
 
 img {
   max-width: 100%;
