--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,6 +23,11 @@ body::-webkit-scrollbar-track {
   background: #f3f3f3;
   border-radius: 8px;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
+
 .no-scroll .categories a {
   pointer-events: none;
 }
